fixed searchlist z-index

--- a/src/components/clusterMap.css
+++ b/src/components/clusterMap.css
@@ -2,4 +2,5 @@
   width: 100%;
   height: 650px;
   border-radius: 16px;
+  z-index: 1;
 }
